--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
               </li>
             </ul>
           </div>
@@ -245,13 +245,21 @@
 
     <section id="cta">
       <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <button type="button" class="btn btn-dark btn-lg download-btn">
+        <i class="fa-brands fa-apple"></i> Download
+      </button>
+      <button type="button" class="btn btn-light btn-lg download-btn">
+        <i class="fa-brands fa-google-play fa-bounce"></i> Download
+      </button>
     </section>
 
     <!-- Footer -->
 
     <footer id="footer">
+      <i class="icon fa-brands fa-twitter fa-2xs"></i>
+      <i class="icon fa-brands fa-facebook fa-2xs"></i>
+      <i class="icon fa-brands fa-instagram fa-2xs"></i>
+      <i class="icon fa-solid fa-envelope fa-2xs"></i>
       <p>© Copyright TinDog</p>
     </footer>
   </body>
